5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4085/executions/1602_2895.log
== TEST (2019-03-22 22:17:19) 
-- CODE:
a = int(input("quantidade de jogos"))
b = float(input("valor unitário"))
c = float(input("valor do frete"))
preço total = a * b + c

print (total)
-- ERROR:
File "XXXX", line 4
    preço total = a * b + c
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:19:54) 
-- CODE:
a = int(input("quantidade de jogos"))
b = float(input("valor unitário"))
c = float(input("valor do frete"))
preço total = (a * b) + c

print (total)
-- ERROR:
File "XXXX", line 4
    preço total = (a * b) + c
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:20:00) 
-- CODE:
a = int(input("quantidade de jogos"))
b = float(input("valor unitário"))
c = float(input("valor do frete"))
preço total = (a * b) + c

print (total)
-- ERROR:
File "XXXX", line 4
    preço total = (a * b) + c
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 22:20:05) 
-- CODE:
a = int(input("quantidade de jogos"))
b = float(input("valor unitário"))
c = float(input("valor do frete"))
preço total = (a * b) + c

print (total)
-- EXECUTION TIME:
0.184777
-- ERROR:
  File "/home/codebench/codes/1602/2895/main.py", line 4
    pre\xe7o total = (a * b) + c
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:21:04) 
-- CODE:
a = int(input("quantidade de jogos"))
b = float(input("valor unitário"))
c = float(input("valor do frete"))
preço total = float(input((a * b) + c))

print (total)
-- ERROR:
File "XXXX", line 4
    preço total = float(input((a * b) + c))
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:21:46) 
-- CODE:
a = int(input("quantidade de jogos"))
b = float(input("valor unitário"))
c = float(input("valor do frete"))
preço total = a*b + c

print (total)
-- ERROR:
File "XXXX", line 4
    preço total = a*b + c
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:22:03) 
-- CODE:
a = int(input("quantidade de jogos"))
b = float(input("valor unitário"))
c = float(input("valor do frete"))
preço total = (a*b) + c

print (total)
-- ERROR:
File "XXXX", line 4
    preço total = (a*b) + c
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:24:15) 
-- CODE:
a = int(input("quantidade de jogos"))
b = float(input("valor unitário"))
c = float(input("valor do frete"))
preçototal = (a*b) + c

print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print (total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 22:24:27) 
-- CODE:
a = int(input("quantidade de jogos"))
b = float(input("valor unitário"))
c = float(input("valor do frete"))
preçototal = (a*b) + c

print (total)
-- EXECUTION TIME:
0.156926
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 6, in <module>
    print (total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:24:48) 
-- CODE:
a = int(input("quantidade de jogos"))
b = float(input("valor unitário"))
c = float(input("valor do frete"))
preçototal = (a*b) + c

print (preçototal)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 22:24:59) 
-- CODE:
a = int(input("quantidade de jogos"))
b = float(input("valor unitário"))
c = float(input("valor do frete"))
preçototal = (a*b) + c

print (preçototal)
-- EXECUTION TIME:
0.156345
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
